# lvgl_workshop

./: .gitignore  .gitmodules  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  TUTORIAL.md  sdkconfig.defaults
.agent/skills/esp_flash_monitor/: SKILL.md
.agent/skills/integrate_external_library/: SKILL.md
.agent/skills/manage_esp_idf_components/: SKILL.md
.agent/skills/report_issue_lvgl_cpp/: SKILL.md
.agent/skills/safe_repository_contribution/: SKILL.md
components/lvgl_s3_simd_patch/: CMakeLists.txt
components/lvgl_s3_simd_patch/include/: lv_draw_sw_asm_custom.h
components/lvgl_s3_simd_patch/src/: lv_draw_sw_asm_shim.c
main/: CMakeLists.txt  Kconfig.projbuild  hummingbird.h  idf_component.yml  main.cpp  raccoon.h  whale.h  workshop_config.h
main/hw/: chsc6x.cpp  chsc6x.h  gc9a01.cpp  gc9a01.h
main/sys/: lvgl_port.cpp  lvgl_port.h
main/ui/: workshop_ui.cpp  workshop_ui.h
